add A2 pricing attack
